# Tiny

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  forms.py  models.py  views.py
app/static/: .styles.css.swp  styles.css
app/templates/: .index.html.swp  index.html
tests/: conftest.py  test_views.py
