[project]
name = "tiny"
version = "0.1.0"
description = "URL shortner"
authors = [
    {name = "Craftermath",email = "Craftermath@duck.com"}
]
license = {text = "GPL3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "shortuuid (>=1.0.13,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
